# harness-core

./: .gitignore  README.md  pyproject.toml
docs/: cli-friction-notes.md  event-contract.md  hardening-pass.md
fixtures/records/: run.invalid.json  run.valid.json
fixtures/runs/run-decision-override/: events.jsonl
fixtures/runs/run-failed-retry/: events.jsonl
fixtures/runs/run-invalid-events/: events.jsonl
fixtures/runs/run-risky-command/: events.jsonl
fixtures/runs/run-success/: events.jsonl
src/harness_core/: __init__.py  cli.py  events.py  replay.py  run_record.py  run_writer.py  validation.py
tests/: test_cli.py  test_event_schema.py  test_optional_metadata.py  test_replay.py  test_run_record.py  test_run_writer.py  test_validation.py
