[project]
name = "harness-core"
version = "0.1.0"
description = "Durable JSONL trace substrate for agent runs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
]

[project.scripts]
harness = "harness_core.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness_core"]

[tool.pytest.ini_options]
pythonpath = ["src"]
